--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
     "join-monster": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3"
   },
